set header config

--- a/Pages/HomePage/Index.html
+++ b/Pages/HomePage/Index.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/10c2a015e5.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
     <title>&lt;DevPass&gt;</title>
 </head>
 
 <body>
-    <h1>teste</h1>
+    <header>
+        <img src="./Src/LogoDevPass.png" alt="Logo DevPass">
+        <img src="Src/message-solid 1.svg" alt="Message Icon">
+    </header>
 </body>
 
 </html>
