--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta http-equiv="refresh" content="0;url=pages/HomePage/Index.html">
+  <title>&lt;DevPass&gt;</title>
 </head>
 <body>
   Redirecting...
