--- a/Pages/HomePage/Index.html
+++ b/Pages/HomePage/Index.html
@@ -16,6 +16,8 @@
         <img src="./Src/LogoDevPass.png" alt="Logo DevPass">
         <img src="Src/message-solid 1.svg" alt="Message Icon">
     </header>
+
+    <h1>Seja bem vindo<b> usuário</b></h1>
 </body>
 
 </html>
